1998-06-10  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* tape-src/tapetype.c: new program: calculates tapetype parameters.
	* tape-src/Makefile.am (EXTRA_PROGRAMS): added tapetype.
	* example/amanda.conf.in: point to tapetype program.

1998-06-09  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/SAMBA: added notes about (not) backing up registry files and
	ACLs with SAMBA.
	* docs/INSTALL: point to docs/SAMBA for usage and limitations

1998-06-08  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in (amanda_cv_print_command): removed; using PRINT
 	instead.

1998-06-07  Todd Kover <kovert@omniscient.com>

	* add --with-owner option to allow installed binaries to be owned
	by someone other than the amanda user

	* add GB as valid holding disk size.

1998-06-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c (info): don't need to specify an host.

	* server-src/amadmin.c (due): new due command to write when a
	filesystem is due ffor next level 0 or how much days it is
	overdue.

	* server-src/amstatus.pl.in (dump_size): new function to report
	the size of a dump split on multiple files.

1998-06-05  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/extract_list.c (read_buffer): write a message
	when amrecover timeout waiting for amrestore to send the dump.

1998-06-04  John R. Jackson  <jrj@purdue.edu>

	* client-src/getfsent.c (main): use a dynamically allocated string
	for the lookups since dev2rdev alters it on the fly and some systems
	drop core for trying to write into read only memory.  Also add the
	capability of passing additional lookups on the command line.

	* common-src/Makefile.am, common-src/file.c (main),
	common-src/token.c (main), server-src/conffile.c (dump_configuration,
	main), server-src/diskfile.c (main), server-src/infofile.c (main):
	Clean up compiler warnings in the test programs and make them all
	work again.

1998-06-03  Alexandre Oliva  <oliva@dcc.unicamp.br>
